k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
# deployment metadata
metadata:
  # deployment name
  name: comment-management-deployment
spec:
  # Create 2 pods
  replicas: 2
  # the pods need to matchLabels
  selector:
    matchLabels:
      app: comment-management
  # define update strategy
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  # Wait at least 5 seconds when containers start
  minReadySeconds: 5
  # pod definition
  template:
    # pod metadata
    metadata:
      # pod labels info
      labels:
        app: comment-management
    spec:
      containers:
        - name: comment-management-container
          # env
          image: gcr.io/xend-326306:comment-management
          ports:
            - containerPort: 5010
          # The kubelet uses liveness probes to know when to restart a container.
          livenessProbe:
            httpGet:
              path: /comment-management/up
              port: 5010
            initialDelaySeconds: 15
            periodSeconds: 14400
            timeoutSeconds: 30
            successThreshold: 1
            failureThreshold: 3
